=head1 Changes in DBD-Oracle 1.16 (svn rev XXX)   XXXX 2004

TODO:
Add to "Unable to find required Oracle OCI files" message some
extra text for Windows users pointing them to PPM and Jeff's PPM repository.
Add DBI dbivport.h etc

  NOTES:
  This release has major changes to Unicode support. See below.
  This release no longer supports the old Oracle 7 OCI interface.

  Fixed build32/build64 Makefile.PL bug spotted by Sean Kelly.
  Fixed Oracle version detection on clients thanks to Marko Asplund.
  Fixed Oracle 10 version detection on clients thanks to Andy Hassall.
  Fixed suprious warning from Makefile.PL thanks to Marko Asplund.
  Fixed placeholder names to be case insensitive thanks to Charles Jardine.
  Fixed some LOB test problems with Oracle 8.1.7 by implementing ora_lob_append
    with OCILobGetLength() and OCILobWrite(), insted of buggy OCILobAppend(),
    if the Oracle client version is < 9.0. Thanks to Jeff Urlwin.
  Fixed reporting of length truncated in error message thanks to Jeff Urlwin.
  Fixed column_info() to handle TIMESTAMP and INTERVAL datatypes
    for Oracle >= 8 thanks to Stephen Clouse.
  Fixed handling of temporary LOBs thanks to Chris Donnelly.
  Fixed STORE to cache attribute value in handle cache.
  Fixed compiler warnings thanks to Robert Baron.
  Fixed seg fault returning LOB Locators reported by Raj Chandran.

  Changed some utf8 internals for LOBs.
  Changed to not warn if ORACLE_HOME env var is not defined
    as it's not used with Oracle's new 'Instant Client'.
  Changed ORA_OCI constant from being just 7 or 8 to being a dualvar:
    in numeric context returns the major version number (8, 9, 10 etc)
    in string context returns "major.minor" version string.

  Added automatic support for UTF-8 for both NLS_LANG and NLS_NCHAR
    Many thanks to Lincoln Baxter who did most of the hard work and testing
    and to Jeff Urlwin and others who also helped out.
    Perl 5.8.x highly recommended if you want to use Unicode.