@@ -89,6 +89,7 @@ OCILobLocatorIsInit
 OCILobRead
 OCILobTrim
 OCILobWrite
+OCILobWriteAppend
 OCILogoff
 OCILogon
 OCINumberAbs
